# tmux-language-server

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: conf.py
docs/api/: tmux-language-server.md
docs/resources/: configure.md  install.md
requirements/: misc.txt
scripts/: generate-tmux.json.py
src/tmux_language_server/: __init__.py  __main__.py  api.py  finders.py  schema.py  server.py  utils.py
src/tmux_language_server/assets/jq/: main.jq  value.jq
src/tmux_language_server/assets/json/: tmux.json
src/tmux_language_server/misc/: __init__.py
tests/: server_test.py  test_server.py  test_utils.py  tmux.conf
